# c99_compiler

./: .gitignore  Makefile  README.md  file_handler.c  keywords.c  keywords.h  main.c  tokenizer.c  tokenizer.h
macro_defined_list_tests/: Makefile  list_util.h  main.c
stage0_first_attempt/: file_handler.h  macros.c  macros.h  preprocessor.c  preprocessor.h
stage10_control_wrapup/: Makefile  ast.h  ast_printer.c  emitter.c  emitter.h  main.c  parser.c  parser.h  parser_context.c  parser_context.h  parser_util.c  parser_util.h  runtime_info_decorator.c  runtime_info_decorator.h  token.h  tokenizer.c  tokenizer.h  tokenizer_context.c  tokenizer_context.h  util.c  util.h
stage10_control_wrapup/tests/: test_break_in_for__10.c  test_is_prime__1.c  test_max__88.c  test_nested_loops_with_break__6.c  test_print__1.c  test_sum_even__30.c
stage11_int_types/: CMakeLists.txt  Makefile  ast.h  ast_printer.c  emitter.c  main.c  parser.c  parser.h  parser_context.c  parser_context.h  parser_util.h  run_all_tests.sh  run_test.sh  run_unit_tests.sh  runtime_info_decorator.c  symtab.c  symtab.h  token.h  tokenizer.c  tokenizer.h  tokenizer_context.c  type.h  util.c
stage11_int_types/include/: analyzer.h  analyzer_context.h  ast.h  ast_list.h  ast_lists.h  ctypes.h  emitter.h  emitter_context.h  ir.h  ir_gen.h  list_util.h  parser.h  parser_context.h  parser_util.h  runtime_info.h  runtime_info_decorator.h  symbol.h  symbol_table.h  symtab.h  token.h  tokenizer.h  tokenizer_context.h  type.h  util.h
stage11_int_types/integration_tests/: test_arg_test__42.c  test_assert_failed__1.c  test_continue_in_for__25.c  test_simple_function_call__1.c
stage12_arrays_and_pointers/: CMakeLists.txt  run_all_tests.sh  run_global_it.sh  run_it.sh  run_test.sh  run_variables_it.sh
stage12_arrays_and_pointers/include/: analyzer.h  ast.h  c_type.h  c_type_printer.h  ctypes.h  emitter.h  emitter_context.h  list_util.h  parser.h  parser_context.h  parser_util.h  symbol.h  symbol_table.h  token.h  util.h
stage12_arrays_and_pointers/integration_tests/: test_pointer_assignment_and_modification__40.c
stage12_arrays_and_pointers/integration_tests/array/: test_array_passed_by_pointer__6.c  test_char_array__42.c  test_long_array__42.c  test_multi_array2__30.c  test_multi_array__20.c
stage12_arrays_and_pointers/integration_tests/functions/: test_arg_test__42.c
stage12_arrays_and_pointers/integration_tests/global/: test_global_array_with_init__42.c  test_global_array_with_nested_init__42.c
stage12_arrays_and_pointers/integration_tests/pointer/: test_local_pointer__42.c
stage12_arrays_and_pointers/src/: Symbol.c  analyzer.c  ast.c  ast_printer.c  c_type.c  c_type_printer.c  ctypes.c  emit_extensions.c  emitter.c  emitter_context.c  error.c  main.c  parser.c  parser_context.c  parser_util.c  token.c  tokenizer.c  util.c
stage12_arrays_and_pointers/unit_tests/: test_analyzer.c  test_assert.h  test_emitter.c  test_parser.c  test_parser_util.c  test_symbol_table.c
stage13_string_literals/: CMakeLists.txt
stage14_floating_point/: CMakeLists.txt  grammar.md  run_all_tests.sh  run_array_it.sh  run_expressions_it.sh  run_extensions_it.sh  run_it_with_memcheck.sh  run_pointer_it.sh  run_string_it.sh
stage15_keywords_and_shifts/: CMakeLists.txt  clean_stage.sh  clean_tests.sh  run_fp_it.sh  run_functions_it.sh  run_statements_it.sh  run_test.sh
stage1_minimal/: Makefile  a.out  tutor1  tutor1.c
stage2_int_expr/: Makefile  run_all_tests.sh  tutor2  tutor2.c
stage3_equality_expr/: Makefile  run_all_tests.sh  run_test.sh  tutor3.c
stage4_unary_expr/: Makefile  ast.h  emitter.c  emitter.h  main.c  parser.c  parser.h  run_test.sh  token.h  tokenizer.c  tokenizer.h
stage5_variables/: Makefile  ast.h  emitter.c  main.c  parser.c  run_all_tests.sh  symtab.c  symtab.h  tokenizer.c
stage6_while_statement/: Makefile  ast.h  emitter.c  main.c  parser.c  run_test.sh  symtab.h  token.h  tokenizer.c  util.c
stage7_for_statement/: ast.h  emitter.c  parser.c  parser.h  run_all_tests.sh  run_test.sh  token.h  tokenizer.c  tokenizer.h  util.h
stage8_block_scope/: ast.h  emitter.c  parser.c  symtab.c  symtab.h  tokenizer.c  util.c
stage9_assert_n_functions/: Makefile  ast.h  ast_printer.c  emitter.c  emitter.h  main.c  parser.c  parser.h  runtime_info_decorator.c  symtab.c  symtab.h  token.h  tokenizer.c  util.c  util.h
tutor1/: tutor1  tutor1.c
(+224 files in other folders)
